welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:9: error: '(' expected but identifier found.
    if biscuit<3 {
       ^Poucet:12: error: '(' expected but identifier found.
    if biscuit>=3 {
       ^